test/cli/test-cases/validate/foreach-pod-security/policy.yaml
apiVersion: kyverno.io/v1
kind: ClusterPolicy
metadata:
  name: restricted-containers-only
spec:
  validationFailureAction: Enforce
  background: false
  rules:
    - name: check-containers
      match:
        any:
        - resources:
            kinds:
              - Pod
      validate:
        foreach:
          # This list selector is the key to the feature
          - list: "request.object.spec.containers"
            podSecurity:
              level: restricted
              version: latest
