test/cli/test-cases/validate/foreach-pod-security/resource-fail.yaml
apiVersion: v1
kind: Pod
metadata:
  name: unsafe-main
  labels:
    app: demo
spec:
  containers:
  - name: main-unsafe
    image: nginx:1.14.2
    securityContext:
      privileged: true # VIOLATION (caught by policy)
