test/cli/test-cases/validate/foreach-pod-security/resource-pass.yaml
apiVersion: v1
kind: Pod
metadata:
  name: safe-main-privileged-init
  labels:
    app: demo
spec:
  initContainers:
  - name: init-privileged
    image: busybox
    securityContext:
      privileged: true  # VIOLATION (but ignored by policy)
  containers:
  - name: main-restricted
    image: nginx:1.14.2
    securityContext:
      allowPrivilegeEscalation: false
      runAsNonRoot: true
      runAsUser: 1000
      seccompProfile:
        type: RuntimeDefault
      capabilities:
        drop:
          - ALL
